# zipreport

./: .flake8  .readthedocs.yml  404.html  LICENSE  README.md  debugserver.py  index.html  mkdocs.insiders.yml  mkdocs.yml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: publish.yml  tox-tests.yml
build_templates/: index.html
cli/: index.html
doc/: Processors.md  ZPT_File_Format.md  faq.md  filters.md
doc/samples/: newsletter.eml
docs/: build_templates.md  build_templates.rst  cli.md  cli.rst  conf.py  faq.md  faq.rst  how_it_works.md  how_it_works.rst  index.md  index.rst  install.md  install.rst  release-notes.md  requirements.txt  security.md  security.rst
docs/samples/: newsletter.eml
docs/source/: zipreport.cli.debug.rst  zipreport.cli.rst  zipreport.fileutils.backend.rst  zipreport.fileutils.rst  zipreport.misc.rst  zipreport.processors.rst  zipreport.report.rst  zipreport.rst  zipreport.template.jinja.rst  zipreport.template.rst
examples/code/: README.md
examples/filter_simple/: main.py
examples/pagedjs/: README.md
examples/processors/: other.py  wkhtml2pdf.py  zipreport-cli.py  zipreport-mime.py  zipreport-server.py
examples/sample1/: index.html  manifest.json
faq/: index.html
how_it_works/: index.html
install/: index.html
release-notes/: index.html
search/: search_index.json
security/: index.html
tests/: utils.py
tests/fileutils/: basefs.py  basezip.py  test_diskfs.py  test_zip.py  (+3 more)
zipreport/: __init__.py  version.py  zipreport.py
(+103 files in other folders)
