[metadata]
name = zipreport-lib
version = attr: zipreport.version.__version__
url = https://github.com/zipreport/zipreport
author = João Pinheiro
description = Python HTML to PDF reporting engine
long_description = file: README.md
long_description_content_type: text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Printing
project_urls =
    Documentation = https://zipreport.readthedocs.io/en/latest/
    Source = https://github.com/zipreport/zipreport

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    jinja2>=3.1
    requests>=2.22.0

[options.extras_require]
weasyprint = weasyprint == 58.1

[options.entry_points]
console_scripts =
    zipreport=zipreport.cli.console:main

[bdist_rpm]
doc_files = docs README.md

[flake8]
exclude = dist,build,.git,.tox,.env
extend-ignore = E203, F403, F401
max-line-length = 120

